plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.teamproject'
version = '0.0.1-SNAPSHOT'
description = 'NAVI_Project KHteam3'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io/' }
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.4.0'
    implementation 'org.modelmapper:modelmapper:3.2.1'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    // Oracle PKI and Wallet support: 전자지갑(Wallet)을 통한 보안 접속에 필수
    implementation 'com.oracle.database.security:oraclepki:23.7.0.25.01'
    //수동으로 Jackson을 추가합니다.
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    // Spring WebFlux 스타터 (WebClient를 사용하기 위해 필요)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.oracle.database.security:osdt_cert:21.17.0.0'
    implementation 'com.oracle.database.security:osdt_core:21.17.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // PortOne REST Client for JAVA: 결제 API
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
    // PortOne이 가져오는 구버전 retrofit/okhttp을 안전한 최신 버전으로 대체
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
    implementation 'com.squareup.okio:okio-jvm:3.4.0'
}

tasks.named('test') {
    useJUnitPlatform()
}